2006-08-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (PC-do-completion): Strip out completion-ignored-extensions
	before checking whether there are multiple completions.
	Don't use `list' unnecessarily when building completion tables.

2006-08-06  Richard Stallman  <rms@gnu.org>

	* help.el (describe-mode): Make minor mode list more concise.

2006-08-05  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el: Give mode-line-format, mode-line-modes, and
	mode-line-position `standard-value' properties.

2006-08-05  Eli Zaretskii  <eliz@gnu.org>

	* buff-menu.el (list-buffers-noselect): For Info buffers, use
	"(file)node" instead of the file name.

2006-08-05  Richard Stallman  <rms@gnu.org>

	* faces.el (escape-glyph): Doc fix.

2006-08-04  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-font): Improve docstring
	and error message.  Use frame-parameter (not frame-parameters).

2006-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/gud.el (gdb-script-font-lock-syntactic-keywords):
	Correctly mark the end-of-docstring char.

2006-08-03  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-to-column): Constrain move-to-column to
	current field.

2006-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font-lock.el (font-lock-beg, font-lock-end)
	(font-lock-extend-region-functions): New vars.
	(font-lock-extend-region-multiline)
	(font-lock-extend-region-wholelines): New functions.
	(font-lock-default-fontify-region): Use them.
	(font-lock-extend-jit-lock-region-after-change): Only round up
	if font-lock-default-fontify-region will do it as well.

	* font-lock.el (font-lock-extend-after-change-region-function):
	Rename from font-lock-extend-region-function.
	(font-lock-extend-region): Remove by inlining at call sites.
	(font-lock-after-change-function): Don't needlessly round up to a whole
	number of lines.
	(font-lock-extend-jit-lock-region-after-change): Be more careful about